lots of updates

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,2 +1,9 @@
 [git_branch]
 symbol = "🌱 "
+
+[nodejs]
+disabled = true
+
+# Disable the package module, hiding it from the prompt completely
+[package]
+disabled = true
